adicionei um álbum de fotos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-content">
             <h1 class="hero-title">Transformamos sua presença digital</h1>
             <p class="hero-subtitle">Estratégias criativas em mídias sociais para o seu negócio crescer</p>
-            <a href="#contato" class="btn-primary">Fale Conosco</a>
+            <a href="#contato" class="btn-primary">Pedir Orçamento</a>
         </div>
         <div class="hero-overlay"></div>
     </section>
@@ -42,7 +42,7 @@
     <!-- Deixe-me Apresentar -->
     <section id="apresentacao" class="apresentacao">
         <div class="container">
-            <h2 class="section-title">Deixe-me Apresentar</h2>
+            <h2 class="section-title">Deixe-nos Apresentar</h2>
             <div class="video-container">
                     <video controls preload="metadata" loop playsinline>
                         <source src="images/WhatsApp Video 2026-01-27 at 12.04.48.mp4" type="video/mp4">
@@ -142,7 +142,10 @@
                         <p>Serviços Profissionais</p>
                     </div>
                 </div>
-
+            </div>
+            
+            <div class="portfolio-more">
+                <a href="album.html" class="btn-ver-mais">Ver mais</a>
             </div>
         </div>
     </section>
